src/ui/readarr_ui/snapshots/managarr__ui__readarr_ui__readarr_ui_tests__tests__snapshot_tests__readarr_ui_renders_context_row.snap
---
source: src/ui/readarr_ui/readarr_ui_tests.rs
expression: output
---
╭  Stats  ──────────────────────────────────────────────────────────────╮╭  Downloads  ─────────────────────────────────────────────────────────╮╭──────────────────╮
│Readarr Version:  1.2.3.4                                              ││Test Download Title                                                   ││  ⠀⠀⠀⠀⠀⣀⣠⣤⣄⣀⠀⠀⠀⠀⠀ │
│Uptime: 0d 00:00:44                                                    ││50% ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━││  ⠀⠀⢀⡴⠛⠉⠀⠀⠀⠉⠛⢦⡀⠀⠀ │
│Storage:                                                               ││                                                                      ││  ⠀⢠⣯⣄⣀⣐⠻⣿⠟⣂⣀⣠⣽⡄⠀ │
│/path: 100% ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━││                                                                      ││  ⠀⣾⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⣷⠀ │
│Root Folders:                                                          ││                                                                      ││  ⠀⢿⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⡿⠀ │
│/nfs: 204800.00 GB free                                                ││                                                                      ││  ⠀⠘⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠃⠀ │
│                                                                       ││                                                                      ││  ⠀⠀⠈⠳⣬⣙⠻⠿⠟⣋⣥⠞⠁⠀⠀ │
│                                                                       ││                                                                      ││  ⠀⠀⠀⠀⠀⠉⠙⠛⠋⠉⠀⠀⠀⠀⠀ │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
╰───────────────────────────────────────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────╯╰──────────────────╯
